# rp2-booster-bootloader

./: .clang-tidy  .clang-tidy-ignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  build.sh  build_uf2.py  merge_uf2.py  show_uf2.py  upload_s3.sh  version.txt
.github/workflows/: build.yml  nightly.yml  release.yml
appsremote/: apps.json
booster/: build.sh  version.txt
booster/src/: CMakeLists.txt  appmngr.c  blink.c  display.c  display_fabric.c  display_mngr.c  display_term.c  display_usb.c  fabric.c  fabric_httpd.c  fsdata_srv.c  hw_config.c  lwipopts.h  main.c  mbedtls_config.h  memmap_booster.ld  mngr.c  mngr_display.c  mngr_httpd.c  network.c  report_flash_usage.cmake  reset.c  romemul.c  romemul.pio  sdcard.c  select.c  term.c  usb_mass.c  version.c
booster/src/cjson/: CMakeLists.txt
booster/src/dhcpserver/: dhcpserver.c  dhcpserver.h
booster/src/dnsserver/: dnsserver.c  dnsserver.h
booster/src/fs/: ap_step1.shtml  ap_step2.shtml  ap_step3.shtml  deleting.shtml  deviceconf.shtml  downloading.shtml  error.shtml  footer.inc  index.html  index.shtml  json.shtml  launching.html  launching.shtml  mngr_config.shtml  mngr_connect.shtml  mngr_home.shtml  mngr_network.shtml  mngr_upgrade.shtml  response.shtml  styles.css  system.shtml  tcpipconf.shtml  wificonf.shtml  wifilist.shtml
booster/src/httpc/: CMakeLists.txt  httpc.c  httpc.h
booster/src/include/: appmngr.h  blink.h  constants.h  debug.h  display.h  display_fabric.h  display_mngr.h  display_term.h  display_usb.h  fabric.h  fabric_httpd.h  ffconf.h  memfunc.h  mngr.h  mngr_httpd.h  network.h  reset.h  romemul.h  sdcard.h  select.h  term.h  term_firmware.h  tprotocol.h  upgrader_firmware.h  usb_mass.h  version.h
booster/src/md5/: CMakeLists.txt  README.md  md5.c  md5.h
booster/src/qrcodegen/: CMakeLists.txt  README.md
booster/src/settings/: settings.c  settings.h
booster/src/u8g2/: CMakeLists.txt  README.md  custom_fonts.c
placeholder/: build.sh  version.txt
placeholder/src/: CMakeLists.txt  aconfig.c  gconfig.c  main.c  memmap_placeholder_copy_to_ram.ld
placeholder/src/include/: aconfig.h  constants.h  gconfig.h
term/atarist/: build.sh
term/atarist/src/: main.s
term/atarist/src/inc/: sidecart_functions.s  sidecart_macros.s
upgrader/: build.sh  firmware.py  upgrader_firmware.h
upgrader/src/: CMakeLists.txt  fatfs_sd_card.c  gconfig.c  hw_config.c  main.c  memmap_upgrader.ld  memmap_upgrader_copy_to_ram.ld  my_debug.c
upgrader/src/include/: constants.h  debug.h  ffconf.h  gconfig.h  my_debug.h  util.h
upgrader/src/settings/: CMakeLists.txt  settings.c  settings.h
